--- a/front-end/src/features/authentication/loginpage.css
+++ b/front-end/src/features/authentication/loginpage.css
@@ -1,20 +1,14 @@
 .loginCompanyInner {
-    position: absolute;
-    top: calc(50% - 596.52px);
-    left: calc(50% + 29.2px);
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.06);
     background-color: #fff;
     border: 1px solid #eaeaea;
-    box-sizing: border-box;
-    width: 830px;
-    height: 1191px;
+    width: 40%;
 }
 
 .loginInfo {
-    height: 800px;
-    max-width: 530px;
+    max-width: 66%;
     margin-left: 150px;
-    margin-top: 220px;
+    margin-top: 140px;
 }
 
 .div1 {
@@ -51,7 +45,6 @@
     background-color: #fff;
     height: 1080px;
     overflow: hidden;
-    text-align: right;
     font-size: 20px;
     color: #8b8b8b;
     font-family: Rubik;
@@ -59,14 +52,12 @@
 
 
 .loginText {
+    text-align: right;
     width: 100%;
-    position: relative;
     font-size: 20px;
     font-weight: 600;
     font-family: Rubik;
     color: #8b8b8b;
-    text-align: right;
-    display: inline-block;
 }
 
 
@@ -75,33 +66,24 @@
 .megayes {
     position: relative;
     cursor: pointer;
+    margin-top: 3px;
 }
 .component286 {
-    width: 260px;
-    height: 40px;
-    overflow: hidden;
+    width: 49%;
     flex-shrink: 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 5px;
     justify-content: center;
-    padding: 8px 20px;
-    box-sizing: border-box;
 }
 .mehapes {
     position: relative;
     font-weight: 600;
+    width: 57%;
 }
 .component282 {
-    width: 260px;
+    width: 49%;
     border-bottom: 1.5px solid #67728a;
-    box-sizing: border-box;
-    height: 40.8px;
-    overflow: hidden;
-    flex-shrink: 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     padding: 8px 20px;
     cursor: pointer;
@@ -109,13 +91,8 @@
 .component286Parent {
     position: relative;
     border-bottom: 0.5px solid #8b8b8b;
-    box-sizing: border-box;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    text-align: left;
     font-size: 20px;
     color: #8b8b8b;
     font-family: Rubik;
@@ -125,7 +102,6 @@
 .childrenContinueWith {
     direction: rtl;
     position: relative;
-    line-height: 28px;
 }
 
 .children {
@@ -274,9 +250,14 @@
 
 
 .logo-icon {
-    width: 26.3px;
+    width: 14%;
     position: relative;
-    height: 25px;
+}
+
+
+.logo-icon-eye {
+    width: 100%;
+    position: relative;
     object-fit: cover;
 }
 .children {
@@ -293,58 +274,41 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    padding: 11px 36px;
-    gap: 24px;
+    padding: 2.1% 7%;
+    gap: 12%;
 }
 
 .login-button-parent {
-    margin-left: 7px;
-    align-self: stretch;
+    margin-right: -6px;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 16px;
+    gap: 3%;
 }
 .line-or-child {
-    position: absolute;
-    top: 14.5px;
-    left: -0.5px;
     border-top: 1px solid #cbd5e0;
-    box-sizing: border-box;
-    width: 237.4px;
-    height: 1px;
+    width: 45%;
 }
 .line-or-item {
-    position: absolute;
-    top: 14.5px;
-    left: 283.14px;
     border-top: 1px solid #cbd5e0;
-    box-sizing: border-box;
-    width: 237.4px;
-    height: 1px;
+    width: 45%;
 }
 .divOr {
-    position: absolute;
-    top: 5px;
-    left: 253px;
-    letter-spacing: -0.15px;
     line-height: 20px;
 }
 .line-or {
-    width: 520px;
+    width: 97.7%;
     position: relative;
     height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .frame-parent {
     width: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: flex-start;
     gap: 40px;
-    text-align: left;
     font-size: 16px;
     color: #8b8b8b;
     font-family: Rubik;
@@ -352,30 +316,20 @@
 
 
 .frameGroup {
-    align-self: stretch;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    margin-left: 10px;
     gap: 24px;
-    text-align: right;
     color: #9f9f9f;
 }
 
 .loginButton {
     cursor: pointer;
-    width: 520px;
+    width: 98%;
     border-radius: 8px;
     background-color: #fff;
     border: 1px solid #cbd5e0;
-    box-sizing: border-box;
     height: 56px;
-    overflow: hidden;
-    flex-shrink: 0;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
     padding: 10px 20px;
     gap: 20px;
   }
@@ -383,8 +337,6 @@
 .group {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
     gap: 16px;
 }
 
@@ -478,11 +430,8 @@
     position: relative;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: flex-end;
     gap: 16px;
-    text-align: right;
     font-size: 16px;
     color: #8b8b8b;
     font-family: Rubik;
@@ -495,16 +444,8 @@
     direction: rtl;
     position: relative;
     text-decoration: underline;
-    line-height: 28px;
-}
+    line-height: 28px;}
 
-.underline-button {
-    border-radius: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-}
 
 .divRem {
     position: relative;
@@ -527,7 +468,7 @@
     gap: 8px;
 }
 .underline-button-parent-pass {
-    margin-left: -5px;
+    margin-left: 3px;
     width: 100%;
     position: relative;
     display: flex;
@@ -562,6 +503,11 @@
 
 
 
+.connectButton {
+    margin-left: 36%;
+    margin-right: 36%;
+}
+
 .button1 {
     position: relative;
 }
@@ -571,18 +517,11 @@
     border-radius: 28px;
     background-color: #8b8b8b;
     border: 1px solid #8b8b8b;
-    height: 56px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    text-align: center;
     font-size: 16px;
     color: #fff;
     font-family: Rubik;
-    width: 147px;
-    margin-top: 100px;
-    margin-left: 186.5px;
+    width: 100%;
+    margin-top: 70%;
 }
 
 .continueButton {
@@ -683,4 +622,189 @@
     font-size: 16px;
     color: #8b8b8b;
     font-family: Rubik;
+}
+
+
+
+.child {
+  	border-top: 1px solid #cbd5e0;
+  	width: 100%;
+    margin-right: 20px;
+}
+.item {
+  	border-top: 1px solid #cbd5e0;
+  	width: 100%;
+    margin-left: 20px;
+}
+.div1Or {
+  	line-height: 0px;
+    margin-left: 0px;
+}
+.divOr {
+    margin-top: 10px;
+    display: flex;
+  	width: 100%;
+  	position: relative;
+  	height: 20px;
+  	font-size: 16px;
+  	color: #8b8b8b;
+  	font-family: Rubik;
+    margin-right: -5px;
+}
+
+
+@media (min-width: 0px) and (max-width: 1024px) {
+    .loginCompanyInner {
+        width: 100%;
+        margin-left: -60px;
+        box-shadow: 0px 0px 0px rgba(0, 0, 0);
+        background-color: #ffffff;
+        border: 0px solid #ffffff;
+    }
+
+    .loginInfo {
+        max-width: 100%;
+        margin-left: 5%;
+        margin-right: 4%;
+        margin-top: 15%;
+    }
+
+    .component286 {
+        width: 100%;
+        /* margin-top: 5px; */
+    }
+
+    .component282 {
+        width: 100%;
+        /* padding: 8px 20px; */
+    }
+
+    .header {
+        width: 100%;
+    }
+
+    .logo-icon {
+        width: 100%;
+        position: relative;
+    }
+
+    .loginCompany {
+        width: 120%;
+        height: 1080px;
+        text-align: right;
+        font-size: 20px;
+        color: #8b8b8b;
+        font-family: Rubik;
+    }
+
+    .mehapes {
+        position: relative;
+        font-weight: 600;
+        width: 160px;
+    }
+
+    .component286Parent {
+        position: relative;
+        border-bottom: 0.5px solid #8b8b8b;
+        width: 45%;
+        display: flex;
+        font-size: 15px;
+        color: #8b8b8b;
+        font-family: Rubik;
+        margin-left: 50px;
+    }
+
+    .loginText {
+        text-align: center;
+        font-size: 20px;
+        font-weight: 600;
+        font-family: Rubik;
+        color: #8b8b8b;
+        margin-left: 45px;
+    }
+
+    .centerMobile {
+        margin-left: 50px;
+    }
+
+    .underline-button-pass {
+        margin-left: 15px;
+    }
+
+    .divTzor {
+        position: absolute;
+        right: 1;
+        margin-left: 50%;
+        margin-top: -0.5%;
+    }
+
+    .div1 {
+        position: absolute;
+        right: 0;
+    }
+}
+
+
+@media (min-width: 1000px) and (max-width: 1400px) {
+    .loginCompanyInner {
+        box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.06);
+        background-color: #fff;
+        border: 1px solid #eaeaea;
+        width: 50%;
+    }
+
+    .mehapes {
+        position: relative;
+        font-weight: 600;
+        width: 110px;
+    }
+}
+
+/* between mobile and pc */
+@media (min-width: 1300px) and (max-width: 1920px) {
+    .mehapes {
+        width: 110px;
+    }
+}
+
+
+/* tablets and ipads */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .loginCompanyInner {
+        box-shadow: 0px 0px 0px rgba(0, 0, 0);
+        background-color: #ffffff;
+        border: 0px solid #ffffff;
+        width: 90%;
+    }
+
+    .logo-icon {
+        width: 15%;
+        position: relative;
+        margin-right: 20px;
+    }
+
+    .mehapes {
+        margin-left: -100px;
+    }
+
+    .component286Parent {
+        width: 50%;
+    }
+
+    .component282 {
+        padding: 8px 150px;
+    }
+
+    .divTzor {
+        margin-right: 10px;
+    }
+
+    .header {
+        width: 75%;
+        margin-top: -2px;
+    }
+
+    .childrenContinueWith {
+        margin-right: -10px;
+    }
 }
